# typhon-deprecated

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  TODO.md
compiler/: CMakeLists.txt  Doxyfile
compiler/backend/generator/: CMakeLists.txt
compiler/backend/generator/inc/: generator.hpp
compiler/backend/generator/src/: gen_c.cpp  gen_c.hpp  gen_common.cpp  gen_common.hpp  gen_expr.cpp  gen_expr.hpp  gen_func.cpp  gen_func.hpp  gen_object.cpp  gen_object.hpp  gen_pst.cpp  gen_pst.hpp  gen_stmt.cpp  gen_stmt.hpp  gen_struct.cpp  gen_struct.hpp  gen_var.cpp  gen_var.hpp  generator.cpp
compiler/core/: CMakeLists.txt
compiler/core/inc/: common.hpp  paths.hpp  project_config.hpp  project_tree.hpp  source.hpp  state_machine.hpp  syntax_tree.hpp  timer.hpp  token.hpp
compiler/core/inc/xml/: rapid_xml.hpp  serialization.hpp
compiler/core/src/: paths.cpp  project_config.cpp  project_tree.cpp  syntax_tree.cpp  token.cpp
compiler/core/src/xml/: serialization.cpp
compiler/frontend/: CMakeLists.txt
compiler/frontend/checker/: CMakeLists.txt
compiler/frontend/checker/inc/: checker.hpp  project_tree.hpp  semantic_analyser.hpp  symbol_table.hpp
compiler/frontend/checker/src/: checker.cpp  semantic_analyser.cpp  symbol_table.cpp
compiler/frontend/lexer/: CMakeLists.txt
compiler/frontend/lexer/inc/: lexer.hpp  token.hpp
compiler/frontend/lexer/src/: lexer.cpp  lexer_comment.cpp  lexer_comment.hpp  lexer_identifier.cpp  lexer_sm.cpp  lexer_sm.hpp  lexer_symbol.cpp  token.cpp
compiler/frontend/parser/: CMakeLists.txt
compiler/frontend/parser/inc/: parser.hpp  syntax_tree.hpp
compiler/frontend/parser/src/: parser.cpp  parser_c.cpp  parser_c.hpp  parser_def_func.cpp  parser_def_func.hpp  parser_def_object.cpp  parser_def_object.hpp  parser_def_struct.cpp  parser_def_struct.hpp  parser_def_var.cpp  parser_def_var.hpp  parser_expression.cpp  parser_expression.hpp  parser_import.cpp  parser_import.hpp  parser_sm.cpp  parser_sm.hpp  parser_statemachine.cpp  parser_statemachine.hpp  parser_statement.hpp  parser_stmt.cpp  parser_stmt.hpp  syntax_tree.cpp
compiler/source/: common.hpp  main.cpp  paths.cpp  paths.hpp  source.cpp  timer.hpp
compiler/source/generation/: gen_common.cpp  gen_expr.hpp  gen_func.cpp  gen_stmt.cpp  gen_struct.cpp  gen_var.cpp  generator.cpp  generator.hpp
compiler/source/lexical_analysis/: lexer.cpp  lexer.hpp  lexer_identifier.cpp  lexer_number.cpp  lexer_sm.hpp  lexer_symbol.cpp  lexer_symbol.hpp  token.hpp
compiler/source/syntax_analysis/: parser_def_var.cpp  parser_import.hpp  parser_statemachine.cpp  parser_statemachine.hpp  parser_statement.cpp  syntax_tree.cpp  syntax_tree.hpp
compiler/source/xml/: serialization.cpp
compiler/tyc/: CMakeLists.txt
compiler/tyc/source/: main.cpp  project_config.cpp  project_config.hpp
demo/: .gitignore  __builtins.hpp  __main.cpp  demo.typ  demo.typroj
demo/source/: main.ty
demo/src/: access.ty  alias.ty  ctype.ty  func.ty  main.ty  struct.ty  tuple.ty  var.ty
docs/: index.css  index.html  language.md
docs/language/: language.html
libraries/core/: CMakeLists.txt  typhon.core.typ  typhon.core.typroj
libraries/core/src/: primatives.ty
libraries/std/src/: string.ty
source/: common.hpp  expression_parsing.cpp  expression_parsing.hpp  fndef_parsing.cpp  fndef_parsing.hpp  lexical_analysis.cpp  lexical_analysis.hpp  main.cpp  paths.hpp  pch.hpp  project_config.cpp  state_machine.hpp  statement_parsing.cpp  statement_parsing.hpp  syntax_analysis.cpp  syntax_analysis.hpp  timer.hpp  vardef_parsing.cpp  vardef_parsing.hpp
source/generation/: gen_common.hpp  gen_expr.cpp  gen_func.cpp  gen_stmt.cpp  gen_struct.cpp  gen_struct.hpp  gen_var.cpp  generator.cpp  generator.hpp
source/lexical_analysis/: lexer.cpp  lexer_comment.cpp  lexer_comment.hpp  lexer_identifier.cpp  lexer_identifier.hpp  lexer_number.cpp  lexer_number.hpp  lexer_sm.cpp  lexer_source.cpp  lexer_source.hpp  lexer_string.cpp  lexer_string.hpp  lexer_symbol.cpp  lexer_symbol.hpp  token.cpp  token.hpp
source/syntax_analysis/: parser.cpp  parser.hpp  parser_def_func.cpp  parser_def_struct.cpp  parser_expression.cpp  parser_expression.hpp  parser_import.cpp  parser_import.hpp  parser_statemachine.cpp  parser_statemachine.hpp  parser_statement.cpp  syntax.cpp  syntax.hpp
source/xml/: serialization.cpp  serialization.hpp
utils/schemas/: typroj.xsd  tyui.xsd
utils/schemas/Examples/: Core.sym  main_window.tyui
utils/vscode-extension/: package.json
utils/vscode-extension/syntaxes/: typhon.tmLanguage.json
